@@ -425,6 +425,10 @@ to $0$.
   \label{fig:masters}
 \end{figure}
 
+\paragraph{Debug Level} The master module also has a parameter
+\textit{debug\_level} to set the initial debug level for all masters (see
+also~\ref{sec:ethercat-debug}).
+
 \paragraph{Init Script}
 \index{Init script}
 
@@ -2091,6 +2095,7 @@ sec.~\ref{sec:autonode} for how to install and configure it.
 %------------------------------------------------------------------------------
 
 \subsection{Setting a Master's Debug Level}
+\label{sec:ethercat-debug}
 
 \lstinputlisting[basicstyle=\ttfamily\footnotesize]{external/ethercat_debug}
 
